--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:k6AvXbeKsK30yN9YORQWqX5M5AfzWuGFrsRf2CvHjKI=
+APP_KEY=base64:5SmYRMwBPUR/ZVspDyUVSjD+r8b/X06qf9hP2yIUORA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=database/database.sqlite
+DB_DATABASE=kasir
 DB_USERNAME=root
 DB_PASSWORD=
 
