--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=database/database.sqlite
+DB_DATABASE=kasir
 DB_USERNAME=root
 DB_PASSWORD=
 
